--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
 }
 
 /* .h1{
@@ -20,10 +21,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 300px;
-  width: 250px;
-  max-width: 90%;
-  margin: 20px
 }
 
 .signup-form__errors {
@@ -32,9 +29,15 @@
 
 .modal__close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 35px;
   text-decoration: none;
+  font-weight: 900;
+  font-size: large;
+  color: black;
+}
+.modal__close:hover {
+  color: #F3712B;
 }
 
 label {
@@ -55,6 +58,7 @@ input:focus {
   padding: 8px;
   margin: 15px;
   width: 200px;
+  border-radius: 5px;
 }
 
 .submit-btn:hover {
