--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,4 +21,7 @@
 #modal-content {
   position: absolute;
   background-color:white;
+  border-radius: 30px; 
+  padding: 1em 3em;
+  position: relative;
 }
