--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
+
 }
 
 /* .h1{
@@ -41,7 +42,7 @@
 }
 
 label {
-  padding-bottom: 15px;
+  padding: 10px;
 }
 
 input{
