--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,34 +1,110 @@
-.nav-bar{
-  border: 1px solid black;
-  height: 100px;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+
+* {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+.nav-bar__container{
+  /* border: 3px solid red; */
+  /* height: 100px;
+  display: flex;
+  justify-content: space-around; */
+  display: grid;
+  /* position: fixed; */
+  width: 100%;
+  height: 3em;
+  box-shadow: 2px 2px 2px 2px rgba(750, 70, 0, 0.6);
+
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.nav-bar__logo-link {
+  grid-column: 2/3;
+  grid-row: 1/4;
+}
+
+.home-logo__image{
+  /* border: 3px solid red; */
+  height: 60px;
+  padding-bottom: 15px;
+  position: relative;
+  float: left;
+}
+
+
+
+.nav-bar__search{
+  grid-column: 4/9;
+  grid-row: 2/4;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  height: 3em;
+}
+
+.nav-bar__search-icon {
+  grid-column: 2/4;
+  grid-row: 1/3;
+  height: 20px;
+  width: 20px;
+  font-size: 25px;
+}
+
+.search-bar{
+  width: 400px;
+  border-radius: 8px;
+  padding-left: 15px;
+  background-color: #F7F3F3;
+  border: .5px solid white;
+}
+
+
+.nav-bar__icons{
+  grid-column: 9/11;
+  grid-row: 2/3;
+  font-size: 25px;
   display: flex;
   justify-content: space-around;
 }
-.nav-bar__main {
 
+.session-links{
+  /* border: 3px solid red; */
+  grid-column: 11/13;
+  grid-row: 2/3;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
 }
-.home-logo{
+
+
+/* .home-logo__image{
   max-width: 150px;
   max-height: 150px;
-}
-.nav-bar__icon{
+} */
+
+/* .nav-bar__icons{
   border-radius: 10px;
   width: 50px;
   height: 40px;
-}
+} */
+
 .profile-btn{
-  border: 1px solid lightgrey;
+  border: .5px solid white;
   background-color: white;
-  padding: 10px;
+  border-radius: 50px;
   position: absolute;
-  right: 5em;
-  top: 1em;
+  font-size: 25px;
 }
-/* .profile-dropdown {
+
+.profile-dropdown {
   position: absolute;
   background-color: white;
   list-style-type: none;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgb(190, 190, 190);
-} */
+  z-index: 1;
+
+}
