--- a/frontend/src/components/HomeBanner/HomeBanner.css
+++ b/frontend/src/components/HomeBanner/HomeBanner.css
@@ -17,7 +17,7 @@
 /* INSIDE big div */
 /* Right small-div */
 .home-banner__image-div {
-  border: 4px red solid;
+  /* border: 4px red solid; */
 
   grid-column: 6/12;
   grid-row: 2/6;
@@ -32,8 +32,7 @@
 /* INSIDE big div */
 /* Left small div */
 .home-banner__container-small {
-  /* border: 4px red solid; */
-  border: 4px blue solid;
+  /* border: 4px blue solid; */
   grid-column: 1/6;
   grid-row: 2/6;
 
@@ -53,43 +52,40 @@
 }
 
 .container-small__div{
-  /* padding-left: 50px; */
-  border: 4px purple solid;
+  /* border: 4px purple solid; */
   grid-column: 1/7;
   grid-row: 3/7;
-
+  padding: 0px 50px;
+  
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(10, 1fr);
 }
 
 .banner-h1__div{
-  border: 2px yellow solid;
+  /* border: 2px yellow solid; */
 
   grid-column: 1/7;
   grid-row: 1/3;
   
   color: #E75A0D;
-  font-size: 34px;
+  font-size: 36px;
   font-weight: 900;
 }
 
-.banner-h1{
-
-}
 
 .banner-h2__div{
-  border: 2px green solid;
+  /* border: 2px green solid; */
 
   grid-column: 1/7;
   grid-row: 4/7;
 
-  font-size: 53px;
+  font-size: 50px;
   font-weight: 900;
 }
 
 .banner-button__div{
-  border: 2px black solid;
+  /* border: 2px black solid; */
   grid-column: 1/7;
   grid-row: 8/11;
 }
