--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -1,5 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet');
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .event-details__container{
-  border: 4px blue solid;
-  grid-column: 1/13;
-  grid-row: 9/15;
+  /* border: 2px blue solid; */
+  grid-column: 3/11;
+  grid-row: 8/18;
+
+  background-color: white;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.event-details__container-left {
+  /* border: 4px red solid; */
+  grid-column: 1/9;
+  grid-row: 1/13;
+  padding: 25px 50px;
+}
+
+.event-details__des-title{
+  /* border: 4px green solid; */
+  padding-bottom: 30px;
+  font-size: 18px;
+  letter-spacing: .1em;
+  color: rgb(51, 51, 51);
+
+}
+
+.event-details__des-body{
+  font-size: 15px;
+  letter-spacing: .1em;
+  font-size: 14px;
+  color: rgb(51, 51, 51);
+
+}
+
+.event-details__container-right {
+  /* border: 4px green solid; */
+  grid-column: 9/13;
+  grid-row: 1/13;
+  padding: 25px 50px;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+}
+
+.date-div{
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.event-details__date-text{
+  font-size: 16px;
+}
+
+.event-details__date-fill{
+  font-size: 14px;
+}
+
+.location-div{
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.event-details__location-text{
+  font-size: 16px;
+  letter-spacing: .08em;
+}
+.event-details__location-fill{
+  font-size: 14px;
+  letter-spacing: .08em;
+}
+.event-details__map-text{
+  font-size: 14px;
+  color: #144BCC;
 }
