--- a/frontend/src/components/GetTickets/GetTickets.css
+++ b/frontend/src/components/GetTickets/GetTickets.css
@@ -1,4 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet');
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.one-ticket__container{
+  /* border: 3px solid red; */
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  /* height: 100px; */
+}
+
+.ticket-date{
+  /* border: 3px solid blue; */
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.month-text{
+  color: red;
+  font-size: 14px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+}
+
+.day-text{
+  font-size: 19px;
+  display: flex;
+  justify-content: center;
+  color: rgb(63, 63, 63);
+}
+
+.ticket-image__container{
+  /* border: 3px solid green; */
+  grid-column: 2/6;
+}
+
 .ticket-img {
-  height: 100px;
-  width: 100px;
+  /* border: 3px solid green; */
+  border-radius: 6px;
+  /* padding: 10px; */
+  margin: 10px;
+  height: 120px;
+  width: 215px;
+}
+
+
+
+
+
+
+
+
+.ticket-details__container{
+  /* border: 3px solid purple; */
+  grid-column: 6/13;
+  grid-row: 1/2;
+
+  /* height: 40px; */
+  /* display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr); */
+  display: flex;
+  flex-direction: column;
+}
+
+.ticket-title{
+  /* grid-row: 1/2; */
+  font-size: 18px;
+  color: rgb(29, 28, 28);
+  padding: 8px 0px 6px 7px;
+}
+
+.ticket-long-date{
+  /* grid-row: 2/3; */
+  font-size: 12px;
+  color: grey;
+  letter-spacing: .02em;
+  padding: 2px 0px 2px 7px;
+
+}
+
+.ticket-host{
+  /* grid-row: 3/4; */
+  font-size: 12px;
+  color: grey;
+  letter-spacing: .03em;
+  padding: 2px 0px 2px 7px;
+
+}
+
+.ticket-price{
+  /* grid-row: 4/5; */
+  font-size: 12px;
+  color: grey;
+  letter-spacing: .04em;
+  padding: 2px 0px 2px 7px;
 }
