--- a/frontend/src/components/FavoritePage/FavoritePage.css
+++ b/frontend/src/components/FavoritePage/FavoritePage.css
@@ -2,5 +2,28 @@
   display: grid;
   height: 2000px;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(30, 1fr)
+  grid-template-rows: repeat(25, 1fr)
+}
+
+.all-favorites__small-container{
+  /* box-shadow:  0 0 30px  rgba(239,231,231,0.9); */
+  /* border: 3px solid red; */
+
+  grid-column: 2/12;
+  grid-row: 2/20;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+}
+
+.likes-text{
+  font-size: 46px;
+  font-weight: 700;
+}
+
+.favorites-event__container{
+  /* border: 3px solid green; */
+  grid-column: 1/13;
+  grid-row: 2/16;
 }
