--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -59,7 +59,7 @@
 }
 
 .nav-bar__search-container{
-  /* border: 3px solid red; */
+  border: 3px solid red;
   grid-column: 4/9;
   height: 50px;
 
@@ -68,15 +68,6 @@
   align-items: center;
 }
 
-.search-bar{
-  /* border-radius: 8px; */
-
-  width: 510px;
-  /* padding-left: 15px; */
-  background-color: #F7F3F3;
-  border: .5px solid white;
-  height: 35px;
-}
 
 
 .session-links{
