search page done

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -59,7 +59,7 @@
 }
 
 .nav-bar__search-container{
-  border: 3px solid red;
+  /* border: 3px solid red; */
   grid-column: 4/9;
   height: 50px;
 
