re styled footer

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -5,55 +5,115 @@
 
 .footer-container {
   display: grid;
-  height: 6em;
+  height: 50px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  font-weight: bold;
-  color: rgb(46, 46, 46);
-  border-top: 2px solid rgb(46, 46, 46);
-}
-
-.quote {
-  grid-column: 2 / 9;
-  grid-row: 3 / 4;
-  font-size: 1em;
+  
+  /* color: rgb(46, 46, 46); */
+  /* border-top: .5px solid rgb(46, 46, 46); */
+  background-color: #0D3082;
 }
 
 .copyright {
+  /* border: 3px solid red; */
+  color: white;
+
+  grid-column: 1/2;
+  font-size: 11px;
+  font-weight: lighter;
+  letter-spacing: .1em;
+
   display: flex;
-  grid-column: 11 / 13;
-  grid-row: 2 / 3;
-  justify-self: end;
-  align-items: flex;
-  padding-right: 25px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.linkedin {
+.quote {
+  /* border: 3px solid red; */
+  color: white;
+
+  grid-column: 3/8;
+  font-size: 13px;
+  font-weight: lighter;
+  letter-spacing: .04em;
+
   display: flex;
-  grid-column: 10 / 13;
-  grid-row: 3 / 4;
-  justify-self: end;
-  align-items: flex-end;
-  padding-right: 10px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.linkedin, .copyright {
+.connect-links__container{
+  /* border: 3px solid blue; */
+  grid-column: 9/13;
+
+  color: white;
+  font-size: 12px;
+  
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  
+}
+
+.linked-in__container{
+  /* border: 3px solid red; */
+  grid-column: 1/2;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.linked-in__text{
+  padding-right: 14px;
+  letter-spacing: .05em;
+  font-weight: lighter;
+  font-size: 12px;
+
+}
+
+.linked-in{
+  color: white;
+  letter-spacing: .05em;
+  font-size: 12px;
+
+}
+
+.linked-in:hover{
+  font-size: 13px;
+}
+
+.git-hub__container{
+  /* border: 3px solid red; */
+  grid-column: 2/3;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.git-hub__text{
+  padding-right: 14px;
+  letter-spacing: .05em;
+  font-weight: lighter;
+  font-size: 12px;
+
+}
+
+.git-hub{
+  color: white;
+  letter-spacing: .05em;
   font-size: 12px;
 }
 
-.linkedin > a {
+.git-hub:hover{
+  font-size: 13px;
+}
   /* text-decoration: none; */
-  padding-left: 5px;
-  color: rgb(46, 46, 46);
-}
-
-#icon { 
-  margin-top: 3px;
-  height: 90px;
-  width: auto;
-  grid-row: 1 / 4;
-  grid-column: 13 / 13;
-}
