--- a/frontend/src/components/OneEvent/OneEvent.css
+++ b/frontend/src/components/OneEvent/OneEvent.css
@@ -1,5 +1,5 @@
 .single-event__container{
-  /* border: 2px solid blue; */
+  border: 2px solid blue;
   background-color: white;
   /* padding: 10px; */
   height: 295px;
@@ -12,6 +12,18 @@
 
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
   transition: box-shadow 0.3s ease-in-out;
+  position: relative;
+}
+
+.heart-img{
+  position: absolute;
+  top: 150px;
+  right: 50px;
+}
+
+.heart-img__svg{
+  height: 20px;
+  width: 20px;
 }
 
 .single-event__container:hover{
